# novelmanger

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: deps.py
app/agents/: tools.py
app/agents/subgraphs/: clio.py  story_keeper.py  workflow.py
app/auth/: deps.py  router.py  schemas.py  service.py
app/common/history/: vector_store.py
app/common/plot/: extracter.py
app/core/: db.py  llm.py  paths.py  settings.py
app/data/: characters.json  plot.json  story_history.json
app/novels/: router.py
app/plot/: router.py
app/repository/client/: llm_client.py
app/service/: agent_service.py  cilo_service.py  embedding_service.py  story_keeper_service.py
app/service/characters/: __init__.py  solar_client.py
app/service/clio_fact_checker_agent/: repo.py  router.py  service.py
app/service/export/: router.py
app/service/history/: solar_client.py
app/service/review/: router.py
app/service/story_keeper_agent/: api.py
app/service/story_keeper_agent/ingest_episode/: ingest_episode.py  schemas.py
app/service/story_keeper_agent/load_state/: extracter.py
app/service/story_keeper_agent/rules/: character_rules.py  check_consistency.py  plot_rules.py  world_rules.py
app/spell/: router.py
app/wiki/: router.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/characters/: page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/materials/: page.tsx
frontend/src/app/plot/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/universe/: page.tsx
frontend/src/components/: DarkModeSync.tsx
frontend/src/components/characters/: CharacterCard.tsx
frontend/src/components/editor/: AiFeedbackPanel.tsx  ExportModal.tsx  MonetaPanel.tsx  NovelEditor.tsx  ReviewPanel.tsx  SearchPanel.tsx  SpellPanel.tsx  StoryPlanPanel.tsx  WikiModal.tsx
frontend/src/components/layout/: ImportModal.tsx  Sidebar.tsx
frontend/src/hooks/: useAnalysis.ts  useAutoSave.ts  useWikiExtract.ts
frontend/src/lib/: api.ts  auth.ts  authOptions.ts
frontend/src/lib/importers/: docx.ts  epub.ts  html.ts  hwpx.ts  index.ts  md.ts  scriv.ts  txt.ts  types.ts  utils.ts
frontend/src/store/: useAuthStore.ts  useStore.ts
frontend/src/types/: index.ts  next-auth.d.ts
infra/deploy/: docker-compose.yml
infra/k8s/application/: 02-configmap.yaml  04-backend.yaml  05-ingress.yaml  06-frontend.yaml  08-secret.yaml
next-frontend/: Dockerfile  package.json  tailwind.config.ts
next-frontend/src/app/: globals.css  layout.tsx  page.tsx
next-frontend/src/app/characters/: page.tsx
next-frontend/src/app/editor/: page.tsx
next-frontend/src/app/materials/: page.tsx
next-frontend/src/app/universe/: page.tsx
next-frontend/src/components/: AppInit.tsx
next-frontend/src/components/editor/: MonetaPanel.tsx  NovelEditor.tsx
next-frontend/src/components/layout/: Sidebar.tsx
next-frontend/src/hooks/: useAnalysis.ts  useAutoSave.ts
next-frontend/src/store/: useStore.ts
next-frontend/src/types/: index.ts
