[project]
name = "moneta_project"
version = "0.1.0"
description = "Moneta: AI-powered Web Novel Assistant (Common Tools API)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",      # 파일 업로드 및 폼 데이터 처리에 필요
    # --- Database (RDBMS: PostgreSQL & ORM) ---
    "sqlalchemy>=2.0.30",           # ORM 핵심
    "psycopg2-binary>=2.9.9",       # PostgreSQL 드라이버
    "pgvector>=0.3.0",              # PostgreSQL 벡터 확장 기능
    # --- Vector Database ---
    "chromadb>=0.5.0",              # 로컬 벡터 DB 코어
    # --- Graph Database (Optional/Future) ---
    "neo4j>=5.20.0",                # Neo4j 드라이버
    # --- LLM & LangChain Ecosystem ---
    "langchain>=0.2.0",             # LangChain 프레임워크
    "langchain-core>=0.2.0",
    "langchain-google-genai>=2.0.0", # Google Gemini 연동
    "langchain-openai>=0.1.0",      # [추가] OpenAI 모델 연동 (테스트 및 백업용)
    "langchain-chroma>=0.1.0",      # LangChain용 Chroma 통합
    "langchain-community>=0.2.0",   # [필수] GoogleSerperAPIWrapper 포함됨
    "openai>=1.52.2",               # OpenAI 클라이언트
    # --- Search Tools ---
    "google-search-results>=2.4.0", # [추가] 검색 관련 유틸리티 라이브러리
    # --- Utilities ---
    "python-dotenv>=1.0.0",         # .env 파일 로드
    "pydantic>=2.7.0",              # 데이터 검증
    "pydantic-settings>=2.2.0",     # 환경설정 관리
    "tiktoken>=0.7.0",              # 토큰 계산용
    "requests>=2.31.0",             # HTTP 요청
    "olefile>=0.47",
    "python-docx>=1.2.0",
    "pymupdf>=1.26.7",
    "konlpy>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]
